# Sonny

./: .gitmodules  CMakeLists.txt  README.md
include/sonny/: sonny.h
test/: CMakeLists.txt  dllmain.cpp  dllmain.h
